--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Todos</title>
-    <base href="TodoWasmPublish/" />
+    <base href="/TodoWasmPublish/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
@@ -20,7 +20,7 @@
     <app><div class="app-loading">Loading...</div></app>
 
 
-    <!-- Start Single Page Apps for GitHub Pages -->
+<!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
         // https://github.com/rafrex/spa-github-pages
@@ -33,10 +33,10 @@
         // When the single page app is loaded further down in this file,
         // the correct url will be waiting in the browser's history for
         // the single page app to route accordingly.
-        (function (l) {
+        (function(l) {
             if (l.search) {
                 var q = {};
-                l.search.slice(1).split('&').forEach(function (v) {
+                l.search.slice(1).split('&').forEach(function(v) {
                     var a = v.split('=');
                     q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
                 });
